--- a/components/shared/Header.css
+++ b/components/shared/Header.css
@@ -16,14 +16,15 @@
 }
 
 .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    /*display: flex;*/
+    /*align-items: center;*/
+    /*justify-content: space-between;*/
     height: 80px;
     padding: 0 2rem;
     color: var(--textColor);
     max-width: 80%;
     margin: 20px auto;
+    z-index: 1000;
 }
 
 .text-change {
@@ -64,11 +65,16 @@ nav {
     user-select: none;
 }
 
-/*
 @media only screen and (max-width: 1024px) {
     header .nav-btn {
         visibility: visible;
         opacity: 1;
+    }
+
+    .navbarr {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
 
     header nav {
@@ -132,4 +138,4 @@ nav {
         transform-origin: bottom left;
         user-select: none;
     }
-}*/
+}
