--- a/components/shared/Hero.css
+++ b/components/shared/Hero.css
@@ -46,7 +46,7 @@
 .hero-container-testimonial {
     align-items: center;
     background-color: white;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .banner-left {
